--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   var jobTitle = "Switcheroo_Health_Display";
 
   var creatives = [
-		    {
-                name: "300x250_50",
-                url: "http://staging.slik.com.au/qantasassure/QASSURE0010_Switcheroo_Health_Display/v5/300x250_50",
-                width: 300,
-                height: 250,
-                type: "iframe"
-            },
+		    // {
+        //         name: "300x250_50",
+        //         url: "http://staging.slik.com.au/qantasassure/QASSURE0010_Switcheroo_Health_Display/v5/300x250_50",
+        //         width: 300,
+        //         height: 250,
+        //         type: "iframe"
+        //     },
             {
                     name: "300x600_50",
                     url: "http://staging.slik.com.au/qantasassure/QASSURE0010_Switcheroo_Health_Display/v5/300x600_50",
@@ -35,17 +35,31 @@
                     type: "iframe"
             },
             {
-                name: "300x250_500",
-                url: "http://staging.slik.com.au/qantasassure/QASSURE0010_Switcheroo_Health_Display/v5/300x250_500",
-                width: 300,
-                height: 250,
-                type: "iframe"
+                    name: "728x90_50",
+                    url: "http://staging.slik.com.au/qantasassure/QASSURE0010_Switcheroo_Health_Display/v5/728x90_50",
+                    width: 728,
+                    height: 90,
+                    type: "iframe"
             },
+            // {
+            //     name: "300x250_500",
+            //     url: "http://staging.slik.com.au/qantasassure/QASSURE0010_Switcheroo_Health_Display/v5/300x250_500",
+            //     width: 300,
+            //     height: 250,
+            //     type: "iframe"
+            // },
             {
                 name: "300x600_500",
                 url: "http://staging.slik.com.au/qantasassure/QASSURE0010_Switcheroo_Health_Display/v5/300x600_500",
                 width: 300,
                 height: 600,
+                type: "iframe"
+            },
+            {
+                name: "728x90_500",
+                url: "http://staging.slik.com.au/qantasassure/QASSURE0010_Switcheroo_Health_Display/v5/728x90_500",
+                width: 728,
+                height: 90,
                 type: "iframe"
             }
 
