--- a/QA_Health_Switcheroo_50_728x90/banner/index.html
+++ b/QA_Health_Switcheroo_50_728x90/banner/index.html
@@ -26,44 +26,50 @@
     <div class="container" style="display:none;">
 
         <div class="overlay">
-            <div class="overlay-close">
-                <img src="close.svg" alt="" />
-            </div>
-            <h6>Important information</h6>
-            <div class="overlay-body">
-                <span class="terms-txt">
-                    Qantas Assure Health Insurance is issued by nib health funds limited ABN 83 000 124 381 (nib) a registered private health insurer, and is arranged by Qantas Airways Limited ABN 16 009 661 901 (Qantas) for which Qantas receives commission.
-                    <br><br>
-                    50,000 is the maximum number of sign on Qantas Points that can be earned upon purchase of combined Top Hospital and Top Extras Cover for Couples or Families.  Each Qantas Assure Health Insurance policy has a maximum number of points that can be earned upon purchase, which can be found <a href="https://www.qantasassure.com/wellness/abouttheprogram" target="_blank">here</a>. Points will only be awarded to the primary policyholder after the policy has been held for 60 continuous days. Not available to existing Qantas Assure Health Insurance customers.
-                </span>
-            </div>
+           <div class="overlay-close">
+               <img src="close.svg" alt="" />
+           </div>
+           <h6>Important information</h6>
+           <div class="overlay-body">
+               <span class="terms-txt">
+                   Qantas Assure Health Insurance is issued by nib health funds limited ABN 83 000 124 381 (nib) a registered private health insurer, and is arranged by Qantas Airways Limited ABN 16 009 661 901 (Qantas), for which Qantas receives commission.
+                   <br><br>
+                   50,000 is the maximum number of sign on Qantas Points that can be earned upon purchase of combined Top Hospital and Top Extras Cover for Couples or Families. Each Qantas Assure Health Insurance policy has a maximum number of points that can be earned upon purchase, which can be found <a href="https://www.qantasassure.com/wellness/abouttheprogram" target="_blank">here</a>. Points will only be awarded to the primary policyholder after the policy has been held for 60 continuous days. Not available to existing Qantas Assure Health Insurance customers.
+               </span>
+           </div>
         </div>
-
         <div class="banner">
-
-            <div class="terms">
-                <span>Conditions Apply. Click here for details.</span>
+            <div class="frame-content clicktag" id="messaging-frame-01">
+                <p>Not feeling rewarded by your health insurance?</p>
             </div>
-
+            <div class="frame-content clicktag" id="messaging-frame-02">
+                <p>Do the <span class="switcheroo-text">Switcheroo</span></p>
+            </div>
             <div class="frame-content clicktag" id="messaging-frame-03">
               <p>Get something back<br>
-                  <span class="qantas-points">Earn up to<br><span class="points-value">50,000</span><br>Qantas Points<span class="asterix-points">*</span></span>
+                  <span class="qantas-points">Earn up to <span class="points-value">50,000</span> Qantas Points<span class="asterix-points">*</span></span>
               </p>
             </div>
-
             <div class="frame-content clicktag" id="messaging-end-frame">
-                <p>
-                    Do the<br>Switcheroo
-                </p>
+                <p>Do the Switcheroo</p>
                 <button id="cta-button">Find out more</button>
-                <!-- <span class="ending-date">Ends 3 April 2017</span> -->
             </div>
+            <div class="terms">
+                <span>* <u>Conditions apply</u>.</span>
+            </div>
+
 
             <div class="clicktag" id="logos-container">
+
                 <img class="qantas-logo-colour" src="logo-qantas-assure.svg" alt="" />
-                <div class='logo-divider-line'></div>
                 <img class="partner-logo" src="logos-partners.svg" alt="" />
+                <div class="logo-divider"></div>
             </div>
+
+
+
+
+
 
             <!-- --------------------------- Intro Animation/Shapes ------------------------------- -->
 
@@ -110,34 +116,24 @@
 
             <!-- --------------------------- Base Shapes ------------------------------- -->
 
-            <!-- Partnership White Shape  SMALL-->
-            <svg class="clicktag" version="1.1" id="partnership-white-shape-small" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 838 462" style="enable-background:new 0 0 838 462;" xml:space="preserve">
-                <style type="text/css">
-                    .partnership-shape-small-path{fill:url(#white-grad-values-small);}
-                </style>
-                <radialGradient id="white-grad-values-small" cx="9.0178" cy="110.8564" r="405.481" gradientTransform="matrix(-0.9173 -0.3981 -0.3981 0.9173 811.8777 119.84)" gradientUnits="userSpaceOnUse">
-                    <stop id="white-grad-small-stop-01" offset="0.4" stop-color="#FFFFFF" stop-opacity="0"/>
-                    <stop id="white-grad-small-stop-02" offset="0.8" stop-color="#FFFFFF" stop-opacity="0"/>
-                    <stop id="white-grad-small-stop-03" offset="1" stop-color="#FFFFFF" stop-opacity="0"/>
-                </radialGradient>
-                <path class="partnership-shape-small-path" d="M368.9,392.1c-113-34.9-233.6-75.8-311.5-101c-31.1-10.1-34.5-53.2-5.2-68.4c55.3-28.6,165.9-85.8,221.1-114.3
-                    c62.2-32.2,131.2-35.9,192.6-16c77.9,25.2,233.6,75.8,311.5,101c31.1,10.1,34.5,53.2,5.2,68.3c-55.3,28.6-165.9,85.8-221.1,114.3
-                    C499.3,408.3,430.2,412.1,368.9,392.1"/>
+
+            <svg class="clicktag" version="1.1" id="white-shape-small" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 viewBox="0 0 2954 655.5" style="enable-background:new 0 0 2954 655.5;" xml:space="preserve">
+                 <style type="text/css">
+                     .partnership-shape-small-path{fill:url(#white-grad-values-small);}
+                 </style>
+                 <radialGradient id="white-grad-values-small" cx="9.0178" cy="110.8564" r="405.481" gradientTransform="matrix(-0.9173 -0.3981 -0.3981 0.9173 811.8777 119.84)" gradientUnits="userSpaceOnUse">
+                     <stop id="white-grad-small-stop-01" offset="0.1" stop-color="#FFFFFF" stop-opacity="0"/>
+                     <stop id="white-grad-small-stop-02" offset="0.7" stop-color="#FFFFFF" stop-opacity="0"/>
+                     <stop id="white-grad-small-stop-03" offset="1" stop-color="#FFFFFF" stop-opacity="0"/>
+                 </radialGradient>
+            <path class="partnership-shape-small-path" d="M0,0"/>
+            <g>
+            	<path class="partnership-shape-small-path" d="M2954,0H0c101.3,0,262.2,11.1,273.4,15.8c6.1,2.6,11.4,7.1,15.1,13.7c34,61.3,88.1,155.8,135.9,244.9
+            		c26.8,48.2,35,106.9,18.2,164.5c-14.9,51.1-44.8,153.5-59.7,204.6c-1.8,6.2-21.7,9.8-51.5,11.2v0.8H2954V0z"/>
+            </g>
             </svg>
 
-            <!-- Partnership White Shape  LARGE-->
-            <svg class="clicktag" version="1.1" id="partnership-white-shape" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 530 400" style="enable-background:new 0 0 530 400;" xml:space="preserve">
-                <style type="text/css">
-                    .partnership-shape-path{fill:url(#white-grad-values);}
-                </style>
-                <radialGradient id="white-grad-values" cx="-62.0673" cy="271.8216" r="967.0001" gradientUnits="userSpaceOnUse">
-                    <stop id="white-grad-stop-01" offset="0.2488" stop-color="#FFFFFF" stop-opacity="0"/>
-                    <stop id="white-grad-stop-02" offset="0.4532" stop-color="#FFFFFF" stop-opacity="0"/>
-                    <stop id="white-grad-stop-03" offset="0.5933" stop-color="#FFFFFF" stop-opacity="0"/>
-                </radialGradient>
-                <path class="partnership-shape-path" d="M420.8,92.6c-46.8,37.9-104.3,52.9-159.3,46.7c-86.8-8.5-178.9-19.7-247.5-27.6v274.9h504V14.1
-                    C482.3,42.9,444.7,73.3,420.8,92.6z"/>
-            </svg>
 
             <!-- Gradient Red Shape  -->
             <svg class="clicktag" version="1.1" id="red-gradient" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 838 462" style="enable-background:new 0 0 838 462;" xml:space="preserve">
@@ -145,27 +141,46 @@
                     .red-gradient-path{fill:url(#red-grad-values2);}
                 </style>
                 <radialGradient id="red-grad-values2" cx="68" cy="472" r="742.0027" gradientUnits="userSpaceOnUse">
-                    <stop  offset="0.316" style="stop-color:#F70500;stop-opacity:0"/>
-                    <stop  offset="0.7709" style="stop-color:#F70500;stop-opacity:0.9628"/>
-                    <stop  offset="1" style="stop-color:#F70500"/>
+                    <stop id="red-grad-stop-01" offset="0.316" stop-color="#F70500" stop-opacity="0"/>
+                    <stop id="red-grad-stop-02" offset="0.7709" stop-color="#F70500" stop-opacity="0"/>
+                    <stop id="red-grad-stop-03" offset="1" stop-color="#F70500" stop-opacity="0"/>
                 </radialGradient>
                 <path class="red-gradient-path" d="M400.8,49.6c136.1-15,282.9-27.2,377.3-36.3c37.7-3.6,61.1,40.6,37,70.2c-45.5,55.8-136.6,167.5-182.1,223.3
                     c-51.2,62.8-122.8,98.6-197.1,105.7c-94.3,9.1-283,27.2-377.3,36.3c-37.7,3.6-61.1-40.6-37-70.1c45.5-55.8,136.6-167.5,182.1-223.3
                     C254.9,92.5,326.5,56.7,400.8,49.6"/>
             </svg>
 
+
+            <!-- Text Base Shape  -->
+            <svg class="clicktag" version="1.1" id="text-base-shape" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 viewBox="0 0 601.3 655.5" style="enable-background:new 0 0 601.3 655.5;" xml:space="preserve">
+             <style type="text/css">
+                 .text-base-path{fill:url(#red-grad-values3);}
+             </style>
+             <radialGradient id="red-grad-values3" cx="68" cy="472" r="742.0027" gradientUnits="userSpaceOnUse">
+                 <stop id="text-base-grad-stop-01" offset="0.1" stop-color="#d00914" stop-opacity="0"/>
+                 <stop id="text-base-grad-stop-02" offset="0.2" stop-color="#d00914" stop-opacity="0"/>
+                 <stop id="text-base-grad-stop-03" offset="1" stop-color="#d00914" stop-opacity="0"/>
+             </radialGradient>
+            <path class="text-base-path" d="M574.3,274.4C526.5,185.3,472.4,90.8,438.4,29.5c-3.7-6.6-9-11.1-15.1-13.7C407,9,74.1-11.3,68.3,8.5
+            	C53.5,59.7,23.6,162.1,8.7,213.2c-16.8,57.5-8.6,116.2,18.2,164.4c33.9,61.2,101.9,183.7,135.9,244.9c13.6,24.5,362.1,48,370,21
+            	c14.9-51.1,44.8-153.5,59.7-204.6C609.3,381.3,601.1,322.6,574.3,274.4"/>
+            </svg>
+
+
             <!-- Gradient Red Base  -->
-            <svg class="clicktag" version="1.1" id="base-red" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 300 600" style="enable-background:new 0 0 300 600;" xml:space="preserve">
+            <svg class="clicktag" version="1.1" id="base-red" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 728 90" style="enable-background:new 0 0 728 90;" xml:space="preserve">
                 <style type="text/css">
                     .base-shape-path{fill:url(#red-grad-values);}
                 </style>
-                <radialGradient id="red-grad-values" cx="150" cy="300" r="149.0034" gradientUnits="userSpaceOnUse">
+                <radialGradient id="red-grad-values" cx="364" cy="45" r="228" gradientUnits="userSpaceOnUse">
                     <stop id="base-grad-stop-01" offset="0" stop-color="#F70500" stop-opacity="1"/>
                     <stop id="base-grad-stop-02" offset=".528" stop-color="#F70500" stop-opacity="1"/>
                     <stop id="base-grad-stop-03" offset="1" stop-color="#F70500" stop-opacity="1"/>
                 </radialGradient>
-                <rect class="base-shape-path" width="300" height="600"/>
+                <rect class="base-shape-path" width="728" height="90"/>
             </svg>
+
 
             <!-- Base Solid Red  -->
             <div id="solid-red-base"></div>
@@ -175,31 +190,19 @@
 
 
             <!-- Background Images -->
+            <div class="bg-Wrapper">
+                <div class="flip">
+                  <div class="bg-image back">
+                      <img class="bg-image-02" src="base-image-02.jpg" alt="" />
+                  </div>
+                  <div class="bg-image clicktag">
+                      <img class="bg-image-01" src="base-image-01.jpg" alt="" />
+                  </div>
 
-            <div class="bg-image clicktag">
-                <div class="bg-Wrapper">
-                    <div class="flip">
-                        <div class="bgImage front">
-                            <div class="frame-content clicktag" id="messaging-frame-01">
-                                <p>Not feeling<br>rewarded by your<br>health insurance?</p>
-                            </div>
-                            <img class="bg-image-01" src="base-image-01.jpg" alt="" />
-                            <div class="copy-gradient"></div>
-                        </div>
-                        <div class="bgImage back">
 
-                            <img class="bg-image-02" src="base-image-02.jpg" alt="" />
-                            <div class="copy-gradient"></div>
-                        </div>
-                    </div>
                 </div>
             </div>
-            <div class="frame-content clicktag" id="messaging-frame-02">
-              <p>
-                  Do the<br>
-                  <span class="switcheroo-text">Switcheroo</span>
-              </p>
-            </div>
+
 
             <!-- End Background Images -->
 
